feat: substituir comparativo por pico de consumo na agua

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3188,27 +3188,31 @@
               <div class="tank-chart" id="recria-mini-chart"></div>
             </div>
 
-            <!-- Card Comparativo -->
+            <!-- Card Pico de Consumo -->
             <div class="water-tank-card difference">
               <div class="tank-header">
-                <div class="tank-icon">📊</div>
+                <div class="tank-icon">🔥</div>
                 <div class="tank-info">
-                  <h3 class="tank-title-big">COMPARATIVO</h3>
-                  <span class="tank-status-badge secondary">Análise</span>
+                  <h3 class="tank-title-big">MAIOR CONSUMO</h3>
+                  <span class="tank-status-badge secondary">Pico no Período</span>
                 </div>
               </div>
               <div class="tank-stats four-cols">
                 <div class="tank-stat">
-                  <span class="tank-stat-value" id="diferenca-consumo">--</span>
-                  <span class="tank-stat-label">Diferença (m³)</span>
+                  <span class="tank-stat-value" id="pico-aviarios-valor">--</span>
+                  <span class="tank-stat-label">Aviários (m³)</span>
                 </div>
                 <div class="tank-stat">
-                  <span class="tank-stat-value" id="total-consumo">--</span>
-                  <span class="tank-stat-label">Total Consumido</span>
+                  <span class="tank-stat-value" id="pico-aviarios-data">--</span>
+                  <span class="tank-stat-label">Data</span>
                 </div>
                 <div class="tank-stat">
-                  <span class="tank-stat-value" id="media-geral">--</span>
-                  <span class="tank-stat-label">Média Geral/Dia</span>
+                  <span class="tank-stat-value" id="pico-recria-valor">--</span>
+                  <span class="tank-stat-label">Recria (m³)</span>
+                </div>
+                <div class="tank-stat">
+                  <span class="tank-stat-value" id="pico-recria-data">--</span>
+                  <span class="tank-stat-label">Data</span>
                 </div>
               </div>
             </div>
