--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4462,6 +4462,9 @@
     </div>
   </div>
 
+  <!-- Chart.js para gráficos -->
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+  
   <script src="config.js"></script>
   <script src="app.js"></script>
 </body>
