--- a/frontend/index.html
+++ b/frontend/index.html
@@ -83,6 +83,7 @@
       border-radius: 50%;
       filter: blur(60px);
       animation: floatLight 8s ease-in-out infinite;
+      pointer-events: none;
     }
 
     #auth-screen::before {
@@ -149,6 +150,7 @@
       animation: floatLight 10s ease-in-out infinite;
       animation-delay: -2s;
       z-index: -1;
+      pointer-events: none;
     }
 
     .auth-logo {
@@ -1536,6 +1538,16 @@
       align-items: center;
       justify-content: center;
       z-index: 9998;
+      opacity: 0;
+      visibility: hidden;
+      pointer-events: none;
+      transition: all 0.3s;
+    }
+    
+    .modal-overlay.active {
+      opacity: 1;
+      visibility: visible;
+      pointer-events: auto;
     }
 
     .modal {
