fix: corrige scroll e sobreposicao de views ao navegar

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -760,11 +760,12 @@
     }
 
     .view {
-      display: none;
+      display: none !important;
+      position: relative;
     }
 
     .view.active {
-      display: block;
+      display: block !important;
     }
 
     /* Cards */
