--- a/frontend/index.html
+++ b/frontend/index.html
@@ -12,7 +12,8 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
   <meta name="apple-mobile-web-app-title" content="Icarus">
   <link rel="manifest" href="manifest.json">
-  <link rel="apple-touch-icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><rect fill='%230a0a0a' width='100' height='100' rx='20'/><text x='50' y='65' font-size='50' text-anchor='middle' fill='%23d4af37'>⚙️</text></svg>">
+  <link rel="apple-touch-icon" href="icon.svg">
+  <link rel="icon" type="image/svg+xml" href="icon.svg">
   
   <style>
     * { margin: 0; padding: 0; box-sizing: border-box; }
@@ -78,6 +79,122 @@
     @keyframes pulse {
       0%, 100% { opacity: 1; transform: scale(1); }
       50% { opacity: 0.7; transform: scale(0.95); }
+    }
+
+    /* Welcome Screen (Boas-vindas animada) */
+    #welcome-screen {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: linear-gradient(135deg, #0a0a0a 0%, #1a1a1a 50%, #0a0a0a 100%);
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      z-index: 9999;
+      transition: opacity 0.8s ease, transform 0.8s ease;
+    }
+
+    #welcome-screen.hidden {
+      opacity: 0;
+      transform: scale(1.1);
+      pointer-events: none;
+    }
+
+    .welcome-container {
+      text-align: center;
+      animation: welcomeFadeIn 1s ease-out;
+    }
+
+    @keyframes welcomeFadeIn {
+      from {
+        opacity: 0;
+        transform: translateY(30px);
+      }
+      to {
+        opacity: 1;
+        transform: translateY(0);
+      }
+    }
+
+    .welcome-star {
+      margin-bottom: 30px;
+      color: var(--gold);
+      animation: welcomeStarPulse 2s ease-in-out infinite, welcomeStarRotate 20s linear infinite;
+    }
+
+    @keyframes welcomeStarPulse {
+      0%, 100% { filter: drop-shadow(0 0 20px rgba(212, 175, 55, 0.8)); }
+      50% { filter: drop-shadow(0 0 40px rgba(212, 175, 55, 1)); }
+    }
+
+    @keyframes welcomeStarRotate {
+      from { transform: rotate(0deg); }
+      to { transform: rotate(360deg); }
+    }
+
+    .welcome-title {
+      font-size: 28px;
+      color: var(--text-secondary);
+      font-weight: 300;
+      margin: 0;
+      opacity: 0;
+      animation: welcomeTextIn 0.8s ease-out 0.3s forwards;
+    }
+
+    .welcome-name {
+      font-size: 42px;
+      color: var(--gold);
+      font-weight: 700;
+      margin: 10px 0;
+      text-transform: uppercase;
+      letter-spacing: 2px;
+      opacity: 0;
+      animation: welcomeTextIn 0.8s ease-out 0.6s forwards;
+    }
+
+    .welcome-company {
+      font-size: 18px;
+      color: var(--text-secondary);
+      margin: 5px 0 40px;
+      opacity: 0;
+      animation: welcomeTextIn 0.8s ease-out 0.9s forwards;
+    }
+
+    @keyframes welcomeTextIn {
+      from {
+        opacity: 0;
+        transform: translateY(20px);
+      }
+      to {
+        opacity: 1;
+        transform: translateY(0);
+      }
+    }
+
+    .welcome-loader {
+      width: 200px;
+      height: 4px;
+      background: rgba(212, 175, 55, 0.2);
+      border-radius: 2px;
+      margin: 0 auto;
+      overflow: hidden;
+      opacity: 0;
+      animation: welcomeTextIn 0.8s ease-out 1.2s forwards;
+    }
+
+    .welcome-loader-bar {
+      width: 0%;
+      height: 100%;
+      background: linear-gradient(90deg, var(--gold), #fff5cc, var(--gold));
+      border-radius: 2px;
+      animation: welcomeLoaderGrow 2s ease-in-out 1.5s forwards;
+    }
+
+    @keyframes welcomeLoaderGrow {
+      from { width: 0%; }
+      to { width: 100%; }
     }
 
     /* Auth Screen */
@@ -181,34 +298,24 @@
     }
 
     .auth-logo-star {
-      font-size: 80px;
       color: var(--primary);
-      text-shadow: 
-        0 0 20px rgba(212, 175, 55, 1),
-        0 0 40px rgba(212, 175, 55, 0.8),
-        0 0 60px rgba(212, 175, 55, 0.5),
-        0 0 80px rgba(212, 175, 55, 0.3);
+      filter: drop-shadow(0 0 20px rgba(212, 175, 55, 0.8)) drop-shadow(0 0 40px rgba(212, 175, 55, 0.5));
       display: block;
-      line-height: 1;
       animation: starPulse 2.5s ease-in-out infinite;
+    }
+    
+    .auth-logo-star svg {
+      display: block;
     }
 
     @keyframes starPulse {
       0%, 100% { 
         opacity: 1;
-        text-shadow: 
-          0 0 20px rgba(212, 175, 55, 1),
-          0 0 40px rgba(212, 175, 55, 0.8),
-          0 0 60px rgba(212, 175, 55, 0.5),
-          0 0 80px rgba(212, 175, 55, 0.3);
+        filter: drop-shadow(0 0 20px rgba(212, 175, 55, 0.8)) drop-shadow(0 0 40px rgba(212, 175, 55, 0.5));
       }
       50% { 
         opacity: 0.85;
-        text-shadow: 
-          0 0 30px rgba(212, 175, 55, 1),
-          0 0 50px rgba(212, 175, 55, 0.9),
-          0 0 80px rgba(212, 175, 55, 0.6),
-          0 0 100px rgba(212, 175, 55, 0.4);
+        filter: drop-shadow(0 0 30px rgba(212, 175, 55, 1)) drop-shadow(0 0 60px rgba(212, 175, 55, 0.7));
       }
     }
 
@@ -649,14 +756,15 @@
     }
 
     .header-logo-star {
-      font-size: 24px;
       color: var(--primary);
-      text-shadow: 
-        0 0 15px rgba(212, 175, 55, 0.6),
-        0 0 30px rgba(212, 175, 55, 0.4);
       animation: headerStarRotate 8s linear infinite;
-      display: inline-block;
-      filter: drop-shadow(0 2px 8px rgba(212, 175, 55, 0.3));
+      display: inline-flex;
+      align-items: center;
+      filter: drop-shadow(0 0 10px rgba(212, 175, 55, 0.6));
+    }
+    
+    .header-logo-star svg {
+      display: block;
     }
 
     @keyframes headerStarRotate {
@@ -5268,12 +5376,35 @@
     <div class="loader"></div>
   </div>
 
+  <!-- Welcome Screen (Boas-vindas animada) -->
+  <div id="welcome-screen" class="hidden">
+    <div class="welcome-container">
+      <div class="welcome-star">
+        <svg viewBox="0 0 100 100" width="120" height="120">
+          <polygon points="50,5 61,40 95,40 68,60 79,95 50,75 21,95 32,60 5,40 39,40" fill="none" stroke="currentColor" stroke-width="3"/>
+          <polygon points="50,95 61,60 95,60 68,40 79,5 50,25 21,5 32,40 5,60 39,60" fill="none" stroke="currentColor" stroke-width="3"/>
+        </svg>
+      </div>
+      <h1 class="welcome-title">Bem-vindo,</h1>
+      <h2 class="welcome-name" id="welcome-user-name"></h2>
+      <p class="welcome-company" id="welcome-company-name"></p>
+      <div class="welcome-loader">
+        <div class="welcome-loader-bar"></div>
+      </div>
+    </div>
+  </div>
+
   <!-- Auth Screen -->
   <div id="auth-screen" class="hidden">
     <div class="auth-card">
       <div class="auth-logo">
         <div class="auth-logo-container">
-          <div class="auth-logo-star">✡</div>
+          <div class="auth-logo-star">
+            <svg viewBox="0 0 100 100" width="80" height="80">
+              <polygon points="50,5 61,40 95,40 68,60 79,95 50,75 21,95 32,60 5,40 39,40" fill="none" stroke="currentColor" stroke-width="3"/>
+              <polygon points="50,95 61,60 95,60 68,40 79,5 50,25 21,5 32,40 5,60 39,60" fill="none" stroke="currentColor" stroke-width="3"/>
+            </svg>
+          </div>
         </div>
         <h1>ICARUS</h1>
         <p>Sistema de Gestão Premium</p>
@@ -5295,6 +5426,10 @@
         <div class="input-group">
           <label>Senha</label>
           <input type="password" id="password-input" placeholder="Sua senha">
+        </div>
+        <div class="remember-login" style="display: flex; align-items: center; gap: 10px; margin: 15px 0;">
+          <input type="checkbox" id="remember-login" checked style="width: 18px; height: 18px; accent-color: var(--gold);">
+          <label for="remember-login" style="cursor: pointer; color: var(--text-secondary); font-size: 14px;">Lembrar meu login neste dispositivo</label>
         </div>
         <button class="btn" onclick="login()">Entrar</button>
       </div>
@@ -5321,7 +5456,12 @@
     <div class="header">
       <div class="header-left">
         <div class="header-logo">
-          <span class="header-logo-star">✡</span>
+          <span class="header-logo-star">
+            <svg viewBox="0 0 100 100" width="24" height="24">
+              <polygon points="50,5 61,40 95,40 68,60 79,95 50,75 21,95 32,60 5,40 39,40" fill="none" stroke="currentColor" stroke-width="4"/>
+              <polygon points="50,95 61,60 95,60 68,40 79,5 50,25 21,5 32,40 5,60 39,60" fill="none" stroke="currentColor" stroke-width="4"/>
+            </svg>
+          </span>
           <span class="header-logo-text">ICARUS</span>
         </div>
       </div>
