--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5401,8 +5401,9 @@
         <div class="auth-logo-container">
           <div class="auth-logo-star">
             <svg viewBox="0 0 100 100" width="80" height="80">
-              <polygon points="50,5 61,40 95,40 68,60 79,95 50,75 21,95 32,60 5,40 39,40" fill="none" stroke="currentColor" stroke-width="3"/>
-              <polygon points="50,95 61,60 95,60 68,40 79,5 50,25 21,5 32,40 5,60 39,60" fill="none" stroke="currentColor" stroke-width="3"/>
+              <!-- Estrela de Davi: dois triângulos sobrepostos -->
+              <polygon points="50,10 85,70 15,70" fill="none" stroke="currentColor" stroke-width="3" stroke-linejoin="round"/>
+              <polygon points="50,90 85,30 15,30" fill="none" stroke="currentColor" stroke-width="3" stroke-linejoin="round"/>
             </svg>
           </div>
         </div>
@@ -5458,8 +5459,9 @@
         <div class="header-logo">
           <span class="header-logo-star">
             <svg viewBox="0 0 100 100" width="24" height="24">
-              <polygon points="50,5 61,40 95,40 68,60 79,95 50,75 21,95 32,60 5,40 39,40" fill="none" stroke="currentColor" stroke-width="4"/>
-              <polygon points="50,95 61,60 95,60 68,40 79,5 50,25 21,5 32,40 5,60 39,60" fill="none" stroke="currentColor" stroke-width="4"/>
+              <!-- Estrela de Davi: dois triângulos sobrepostos -->
+              <polygon points="50,10 85,70 15,70" fill="none" stroke="currentColor" stroke-width="4" stroke-linejoin="round"/>
+              <polygon points="50,90 85,30 15,30" fill="none" stroke="currentColor" stroke-width="4" stroke-linejoin="round"/>
             </svg>
           </span>
           <span class="header-logo-text">ICARUS</span>
