--- a/mobile-app/www/index.html
+++ b/mobile-app/www/index.html
@@ -2536,13 +2536,15 @@
     /* Notifications */
     .notification-container {
       position: fixed;
-      bottom: 20px;
-      right: 20px;
+      top: 20px;
+      left: 50%;
+      transform: translateX(-50%);
       z-index: 10000;
       display: flex;
       flex-direction: column;
       gap: 12px;
-      max-width: 400px;
+      max-width: 90%;
+      width: 400px;
     }
 
     .notification {
@@ -3259,6 +3261,8 @@
       display: flex;
       align-items: flex-end;
       gap: 8px;
+      overflow-x: auto;
+      max-width: 100%;
     }
 
     .chart-bar-group {
@@ -5381,8 +5385,9 @@
     <div class="welcome-container">
       <div class="welcome-star">
         <svg viewBox="0 0 100 100" width="120" height="120">
-          <polygon points="50,5 61,40 95,40 68,60 79,95 50,75 21,95 32,60 5,40 39,40" fill="none" stroke="currentColor" stroke-width="3"/>
-          <polygon points="50,95 61,60 95,60 68,40 79,5 50,25 21,5 32,40 5,60 39,60" fill="none" stroke="currentColor" stroke-width="3"/>
+          <!-- Estrela de Davi: dois triângulos equiláteros sobrepostos -->
+          <polygon points="50,10 85,70 15,70" fill="none" stroke="currentColor" stroke-width="3" stroke-linejoin="round"/>
+          <polygon points="50,90 85,30 15,30" fill="none" stroke="currentColor" stroke-width="3" stroke-linejoin="round"/>
         </svg>
       </div>
       <h1 class="welcome-title">Bem-vindo,</h1>
