--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6003,6 +6003,16 @@
           </span>
           <span>Aditiva</span>
         </div>
+        <div class="nav-item hidden" data-view="lavanderia">
+          <span class="nav-icon">
+            <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+              <rect x="2" y="4" width="20" height="16" rx="3"/>
+              <circle cx="12" cy="12" r="5"/>
+              <path d="M12 9v6M9 12h6"/>
+            </svg>
+          </span>
+          <span>Lavanderia</span>
+        </div>
         <div class="nav-item" data-view="configuracoes">
           <span class="nav-icon">
             <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
