--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8331,6 +8331,13 @@
             <input type="datetime-local" id="detail-finished-at-custom" style="font-size: 13px;">
           </div>
         </div>
+        <div class="form-row" style="gap: 12px; margin-top: 12px;">
+          <div class="form-group" style="flex: 1; margin-bottom: 0;">
+            <label style="font-size: 12px;">⏸️ Tempo de Descanso (minutos)</label>
+            <input type="number" id="detail-break-minutes" min="0" placeholder="Ex: 60 para 1h de almoço" style="font-size: 13px;">
+            <small style="color: var(--text-secondary); font-size: 11px;">Será descontado do tempo total trabalhado</small>
+          </div>
+        </div>
       </div>
 
       <div class="form-group">
