--- a/mobile-app/www/index.html
+++ b/mobile-app/www/index.html
@@ -843,6 +843,15 @@
       padding: 24px 0;
       overflow-y: auto;
     }
+    
+    /* Esconder sidebar quando for modo lavanderia */
+    body.lavanderia-mode .sidebar {
+      display: none;
+    }
+    
+    body.lavanderia-mode .content {
+      margin-left: 0;
+    }
 
     .nav-item {
       display: flex;
@@ -2050,7 +2059,78 @@
       min-height: calc(100vh - 150px);
     }
     @media (max-width: 1000px) {
-      .lav2-container { grid-template-columns: 1fr; }
+      .lav2-container { 
+        grid-template-columns: 1fr;
+        gap: 16px;
+      }
+      .lav2-sidebar {
+        display: grid !important;
+        grid-template-columns: repeat(2, 1fr);
+        gap: 10px;
+      }
+      .lav2-client-card {
+        padding: 14px;
+      }
+      .lav2-client-name {
+        font-size: 14px;
+      }
+      .lav2-client-info {
+        font-size: 11px;
+      }
+      /* Card de lucro geral no mobile - ocupar 2 colunas */
+      .lav2-sidebar .lav2-client-card:last-child {
+        grid-column: span 2;
+      }
+    }
+    @media (max-width: 500px) {
+      .lav2-container {
+        padding: 0 8px;
+        padding-bottom: 100px;
+      }
+      .lav2-sidebar {
+        grid-template-columns: 1fr 1fr;
+        gap: 8px;
+      }
+      .lav2-client-card {
+        padding: 12px;
+      }
+      .lav2-client-name {
+        font-size: 13px;
+        margin-bottom: 4px;
+      }
+      .lav2-client-info span:last-child {
+        display: none; /* Esconder ciclo no mobile pequeno */
+      }
+      .lav2-header-content {
+        flex-direction: column;
+        gap: 12px;
+        align-items: flex-start;
+      }
+      .lav2-stats-row {
+        grid-template-columns: repeat(2, 1fr) !important;
+        gap: 10px;
+      }
+      .lav2-stat-card {
+        padding: 14px;
+      }
+      .lav2-stat-value {
+        font-size: 22px !important;
+      }
+      .lav2-form-fields {
+        grid-template-columns: repeat(2, 1fr) !important;
+        gap: 10px;
+      }
+      .lav2-form-field input {
+        font-size: 18px;
+        padding: 12px;
+      }
+      .lav2-entries-list {
+        max-height: 250px;
+      }
+      .lav2-entry-item {
+        padding: 10px 12px;
+        font-size: 12px;
+      }
     }
 
     /* Sidebar Clientes */
@@ -9127,6 +9207,10 @@
       <div class="mobile-nav-item" data-view="os" onclick="navigateMobile('os')">
         <svg class="mobile-nav-svg" viewBox="0 0 24 24" fill="currentColor"><path d="M22.7 19l-9.1-9.1c.9-2.3.4-5-1.5-6.9-2-2-5-2.4-7.4-1.3L9 6 6 9 1.6 4.7C.4 7.1.9 10.1 2.9 12.1c1.9 1.9 4.6 2.4 6.9 1.5l9.1 9.1c.4.4 1 .4 1.4 0l2.3-2.3c.5-.4.5-1.1.1-1.4z"/></svg>
         <span class="mobile-nav-label">OS</span>
+      </div>
+      <div class="mobile-nav-item" data-view="lavanderia" onclick="navigateMobile('lavanderia')">
+        <svg class="mobile-nav-svg" viewBox="0 0 24 24" fill="currentColor"><path d="M18 2H6c-1.1 0-2 .9-2 2v16c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2V4c0-1.1-.9-2-2-2zm-1 16H7v-2h10v2zm0-4H7v-2h10v2zm-3-5c-1.66 0-3 1.34-3 3s1.34 3 3 3 3-1.34 3-3-1.34-3-3-3z"/></svg>
+        <span class="mobile-nav-label">Lavanderia</span>
       </div>
       <div class="mobile-nav-item" data-view="controle-agua" onclick="navigateMobile('controle-agua')">
         <svg class="mobile-nav-svg" viewBox="0 0 24 24" fill="currentColor"><path d="M12 2c-5.33 4.55-8 8.48-8 11.8 0 4.98 3.8 8.2 8 8.2s8-3.22 8-8.2c0-3.32-2.67-7.25-8-11.8z"/></svg>
